--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@1,700&family=Cormorant+Upright:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Scheherazade&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'am Shanul</h1>
-    <p>a pro<span class="grammer">grammer</span>.</p>
+    <h2> a pro<span class="grammer">grammer</span>.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
   </div>
@@ -24,40 +25,46 @@
     <div class="profile">
       <img src="images/circle-cropped.png" height="200px" width="200px" alt="profile-pic">
       <h2>Hello.</h2>
-      <p>I'am a Web Developer and Coder, I like Cosmology and Space thing.
+      <p class="intro">I'am a Web Developer and Coder, I like Cosmology and Space thing.
 
-        </p>
+      </p>
     </div>
-    <hr>
+
+    <hr class="middle-end">
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="" src="https://media.giphy.com/media/d9IfL7seBexHLct75B/giphy.gif" height="200px" width="200px" alt="">
+        <img class="webd" src="https://media.giphy.com/media/d9IfL7seBexHLct75B/giphy.gif" alt="webd">
         <h3>Web Development</h3>
         <p>I'am a Web Developer who can create a fully functional website which could meet current market demand.</p>
       </div>
       <div class="skill-row">
-        <img class="" src="https://media.giphy.com/media/xTiTnnnWvRXTeXx3wc/giphy.gif" height="300px" width="300px" alt="">
+        <img class="guitar" src="https://media.giphy.com/media/xTiTnnnWvRXTeXx3wc/giphy.gif" alt="guitar">
         <h3>Guitar</h3>
-        <p>Playing some good leads and chords since 15</p>
+        <p>Playing some good leads and chords since 15. I never wanted to sing. I just wanted to play rhythm guitar - hide in the back and just play.</p>
       </div>
     </div>
-    <hr>
+    <hr class="bottom-start">
     <div class="contact-me">
+      <a href="#" class="redbutton"></a>
       <h2>Get In Touch</h2>
       <h3>If you want to play some leads and code </h3>
       <p>Love playing chords or leads? then head over to me</p>
-      <a class="btn" href="mailto:shanulhuda86@gmail.com">CONTACT ME</a>
+      <a class="btn" href="mailto:shanulhuda86@gmail.com">
+        CONTACT ME
+
+      </a>
     </div>
   </div>
 
 
   <div class="bottom-container">
+
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/shanul_huda">Twitter</a>
     <a class="footer-link" href="https://www.instagram.com/shanul.huda/">Instagram</a>
-      <a class="footer-link" href="https://twitter.com/shanul_huda">facebook</a>
-    <p>© 2020 Shanul Huda.</p>
+
+    <p class="end-line">© 2020 Shanul Huda</p>
   </div>
 
 
